tests/expectations/compiler/integers/i8/no_space_between_literal.out
DCE_ENABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:4:15
     |
   4 |         let i = 1 i8;
     |               ^

DCE_DISABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:4:15
     |
   4 |         let i = 1 i8;
     |               ^
